cmd/g11n-gateway/k8s/02-g11n-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: g11n-gateway
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: g11n-gateway
  template:
    metadata:
      labels:
        app: g11n-gateway
    spec:
      containers:
        - name: g11n-gateway
          image: uhub.service.ucloud.cn/entropypool/g11n-gateway:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/G11nGateway
      volumes:
        - name: service-config
          configMap:
            name: g11n-gateway-config
            items:
              - key: service-conf
                path: G11nGateway.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: g11n-gateway
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50610
      targetPort: 50610
    - name: grpc
      port: 50611
      targetPort: 50611
    - name: healthz
      port: 50612
      targetPort: 50612
    - name: prometheus
      port: 50613
      targetPort: 50613
  selector:
    app: g11n-gateway
